更改周报月报时间 周一，月初 周报 月报

--- a/test/1.html
+++ b/test/1.html
@@ -96,7 +96,7 @@
         let data = new Date();
         console.log("年" + data.getFullYear())
         console.log("月" + (data.getMonth() + 1))
-        console.log(mGetDate())
+        console.log(typeof(mGetDate()))
         console.log(data.getDate())
         console.log(getWeekDate())
 
