--- a/test/2.html
+++ b/test/2.html
@@ -41,7 +41,9 @@
     return weekInfo;
 }
 
-console.log(TodayInfo('2020-11-23').week);
+var s = '2020/11/23'
+
+console.log(TodayInfo(s).week);
     </script>
 </body>
 </html>
